<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context="cs.dawson.dawsonelectriccurrents.WeatherActivity"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical">


    <TextView
        android:id="@+id/dawsonweathertitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:textAlignment="center"
        android:layout_marginBottom="15dp"
        android:text="@string/currentweather"
        android:textSize="30dp"/>

    <TextView
        android:id="@+id/citylabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_weight="0.2"
        android:text="@string/citylabel" />

    <EditText
        android:id="@+id/cityinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:textAlignment="center"
        android:hint="@string/cityhint"/>


    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:onClick="startUvIndex"
            android:text="@string/uvindexlabel" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:onClick="startFiveDayForecast"
            android:text="@string/dayforecastlabel" />



    </LinearLayout>




</LinearLayout>