<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cs.dawson.dawsonelectriccurrents.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/dawsonLogo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_weight="0.5"
            android:onClick="startDawsonPage"
            app:srcCompat="@drawable/dawsonlogo" />

        <ImageView
            android:id="@+id/teamLogo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:adjustViewBounds="true"
            android:scaleType="center"
            android:onClick="startAbout"
            app:srcCompat="@drawable/elecurrents" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/classCancelledBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:onClick="startActivityIntent"
                android:text="@string/classCancelText" />

            <Button
                android:id="@+id/findTeacherBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:onClick="startActivityIntent"
                android:text="@string/findTeacherText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addCalendarBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:onClick="startActivityIntent"
                android:text="@string/addCalendarText" />

            <Button
                android:id="@+id/notesBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:onClick="startActivityIntent"
                android:text="@string/notesText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/weatherBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:onClick="startActivityIntent"
                android:text="@string/weatherText" />

            <Button
                android:id="@+id/academicCalendarBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:onClick="startActivityIntent"
                android:text="@string/academicCalText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/findFriendBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:onClick="startActivityIntent"
                android:text="@string/findFriend" />

            <Button
                android:id="@+id/findFreeFriendBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:onClick="startActivityIntent"
                android:text="@string/findFreeFriendsText" />
        </LinearLayout>

        <TextView
            android:id="@+id/currentTempTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center"
            android:textSize="30sp"
            android:text="@string/currentTempText" />

    </LinearLayout>
</LinearLayout>
