<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/principalbg"
    tools:context="cs.dawson.dawsonelectriccurrents.AboutActivity"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutUs"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_weight="0.08"/>

        <TextView
            android:id="@+id/maxTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maxText"
            android:textSize="20sp"
            android:onClick="showCreatorBlurb"
            android:textAlignment="center"
            android:layout_weight="0.08" />

        <TextView
            android:id="@+id/aleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aleText"
            android:textSize="20sp"
            android:onClick="showCreatorBlurb"
            android:textAlignment="center"
            android:layout_weight="0.08" />

        <TextView
            android:id="@+id/hannahTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hannahText"
            android:textSize="20sp"
            android:onClick="showCreatorBlurb"
            android:textAlignment="center"
            android:layout_weight="0.08" />

        <TextView
            android:id="@+id/kevinTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kevinText"
            android:textSize="20sp"
            android:onClick="showCreatorBlurb"
            android:textAlignment="center"
            android:layout_weight="0.08" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/aboutImageView"
        android:layout_width="match_parent"
        android:textColor="#FFFFFF"
        android:layout_height="match_parent"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/aboutphoto" />


</LinearLayout>