<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cs.dawson.dawsonelectriccurrents.TeacherContactFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/noteachersfound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#0000FF"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/teacherInfo"
            android:textColor="#0000FF"
            android:textSize="30dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".25"
                        android:text="@string/name"
                        android:textColor="#0000FF"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/fullNameTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".75"
                        android:textSize="20dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".25"
                        android:text="@string/email"
                        android:textColor="#0000FF"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/emailTeacherTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".75"
                        android:textSize="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".25"
                        android:textColor="#0000FF"
                        android:textSize="20dp"
                        android:text="@string/office" />

                    <TextView
                        android:id="@+id/officeTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".75"
                        android:textSize="20dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".25"
                        android:textColor="#0000FF"
                        android:textSize="20dp"
                        android:text="@string/local" />

                    <TextView
                        android:id="@+id/localTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".75"
                        android:textSize="20dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".25"
                        android:textColor="#0000FF"
                        android:textSize="20dp"
                        android:text="@string/position" />

                    <TextView
                        android:id="@+id/positionTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".75"
                        android:textSize="20dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".25"
                        android:textColor="#0000FF"
                        android:textSize="20dp"
                        android:text="@string/department" />

                    <TextView
                        android:id="@+id/departmentTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".75"
                        android:textSize="20dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".25"
                        android:textColor="#0000FF"
                        android:textSize="20dp"
                        android:text="@string/sector" />

                    <TextView
                        android:id="@+id/sectorTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".75"
                        android:textSize="20dp"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</FrameLayout>
